# modules_graaljs

./: MODULE.bazel  README.md
.github/workflows/: release.sh  release.yaml  test.yaml
example/: BUILD.bazel  graaljs_info.js  prime.js
graaljs/: MODULE.bazel  assets.bzl  defs.bzl  extensions.bzl  repo.bzl  repositories.bzl  toolchain.bzl
graalnodejs/: MODULE.bazel  assets.bzl  extensions.bzl  repositories.bzl
lib/: extensions.bzl  vendor.bzl
