module(
    name = "bzlparty_modules_graaljs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "rules_nodejs", version = "6.1.3")
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc4")

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

graalnodejs = use_extension("@bzlparty_modules_graaljs//graalnodejs:extensions.bzl", "graalnodejs")
graalnodejs.toolchain(name = "graalnodejs")
use_repo(graalnodejs, "graalnodejs_toolchains")

register_toolchains("@graalnodejs_toolchains//:all")

graaljs = use_extension("@bzlparty_modules_graaljs//graaljs:extensions.bzl", "graaljs")
graaljs.toolchain(name = "graaljs")
use_repo(graaljs, "graaljs_toolchains")

register_toolchains("@graaljs_toolchains//:all")
