load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//graaljs:defs.bzl", "graaljs_binary", "graaljs_test")

js_binary(
    name = "hello_world",
    entry_point = "hello_world.js",
)

graaljs_binary(
    name = "graaljs_info",
    entry_point = "graaljs_info.js",
)

graaljs_test(
    name = "prime_test",
    entry_point = "prime.js",
)
